--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Time Tracker</h1>
+        <h1>PDF Team - Time Tracker</h1>
         
         <div class="form-section">
             <h2>Log Time</h2>
