--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -9,7 +9,8 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <h1>Time Tracker - User Management</h1>
+            <H1>CONTENT CAPTURE TEAM - PDF </H1>
+            <h1>Time Tracker - User Management              </h1>
             <div class="user-info">
                 Welcome, {{ username }} ({{ role }}) | 
                 <a href="/dashboard">Dashboard</a> |
