--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -9,8 +9,8 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <H1>CONTENT CAPTURE TEAM - PDF </H1>
-            <h1>Time Tracker - User Management              </h1>
+            <h1>CONTENT CAPTURE TEAM - PDF </h1><br>
+            <h1>Time Tracker - User Management</h1><br>
             <div class="user-info">
                 Welcome, {{ username }} ({{ role }}) | 
                 <a href="/dashboard">Dashboard</a> |
