--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,8 @@
 <body class="login-body">
     <div class="login-container">
         <div class="login-form">
-            <h1>Time Tracker</h1>
+            <h1>CONTENT CAPTURE TEAM - PDF</h1>
+            <h1>TIME & TASK TRAKER</h1>
             <h2>Login</h2>
             
             {% if error %}
